# SPDX-FileCopyrightText: 2025 2025 Fundament Software SPC <https://fundament.software>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "atspi-bridge"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
atspi-connection = "*"
atspi-proxies = "*"
atspi = { version = "0.25.0", features = ["atspi-connection", "atspi-proxies", "tokio", "zbus"]  }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "*"
zbus = { version = "5.0.1", default-features = false, features = ["tokio"] }
anyhow = "1.0.98"
